Hopefully enable coverage tracking.

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,7 @@ envlist = py33, py34, py35
 deps =
     pip >= 7
     -rtest_requirements.txt
-commands = py.test --cov fakeriak
+commands =
+    py.test --cov fakeriak
+    coverage report
 changedir = tests
